--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "@uiball/loaders": "^1.3.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
