--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@types/node": "^20",
