--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-type-animation": "^3.2.0",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
