--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
     "@uiball/loaders": "^1.3.0",
+    "@vercel/analytics": "^1.1.1",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
